--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,416 @@
-/* CSS here :) */
+.body{
+    font-family: Poppins;
+    margin: 0;
+}
+
+
+li, a, button {
+    color: white;
+    text-decoration: none;
+}
+
+header .logo {
+    height: 10%;
+    width: 5vh;
+}
+
+header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+    background-color: #3a3633;
+}
+
+.nav_links {
+    list-style: none;
+}
+
+.nav_links li{
+    display: inline-block;
+    padding: 0 20px;
+}
+
+.nav_links a {
+    color: #848484;
+    font-size: 20px;
+    text-decoration: none;
+    text-align: center;
+    padding: 20px 0;
+    display: block;
+    position: relative;
+    transition: all 0.3s ease;
+}
+.nav_links a:hover {
+    color: white;
+    display: block;
+}
+.nav_links a::before {
+    content: "";
+    transition: all 0.4s ease-in-out;
+    position: absolute;
+    right: 50%;
+    left: 50%;
+    bottom: 0;
+    height: 2px;
+    background-color: white;
+}
+.nav_links a:hover::before {
+    right: 0;
+    left: 0;
+}
+
+.drop {
+    display: none;
+}
+
+.nav_links li:hover .drop{
+    display: block;
+    position: absolute;
+    background: #38c3db;
+    z-index: 2;
+margin: 0 -40px;
+}
+
+@media (max-width: 768px) {
+    .nav_links{
+        display: none;
+    }
+}
+
+.menu{
+    size: 20%;
+    padding-left: 20px;
+}
+
+@media (min-width: 768px) {
+    .menu{
+    display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .menu{
+        size: 20%;
+        padding-left: 20px;
+    }
+}
+
+
+/* taxi */
+
+.borderbox{
+    border: solid 5px white;
+}
+
+.taxi {
+    background-image: url("/imgs/bg.jpg");
+    width: 100%;
+    height: 1000px;
+    position: relative;
+    top: var(--nav-height);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.top-list{
+    border: solid orange 1px;
+    list-style: none;
+    display: flex;
+    margin: 20px 20px;
+}
+
+.righthalf h2{
+    font-size: 25px;
+    padding: 10px;
+}
+
+.righthalf p{
+    font-size: 14px;
+}
+
+.logo{
+    padding: 5px;
+    width: 2rem;
+}
+
+.nav-list {
+    display: flex;
+    width: 40vw;
+    height: 100%;
+}	
+
+.centerpiece{
+    background-image: url(../imgs/bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 100vh;
+    color: white;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}   
+.bothhalves{
+    display: flex;
+    width: 50%;
+    height: 600px;
+    align-content: center;
+    padding-left: 30%;
+}
+
+.lefthalf{
+    font-size:40px;
+    text-align: left;
+    border-left: solid white 6px;
+    border-top: solid white 6px;
+    border-bottom: solid white 6px;
+    padding-left: 10px;
+    padding-right: 20px;
+}
+.righthalf{
+    background-color: rgba(0,0,0,0.5);
+    border-right: solid white 6px;
+    border-top: solid white 6px;
+    border-bottom: solid white 6px;
+    text-align: left;
+}
+.h2{
+    font-size: 30px;
+    padding: 20px;
+}
+.bottomtext{
+    font-size: 10px;
+    display: flex;
+}
+.lefthalf{
+    font-size: 50px;
+    justify-content: center;
+    padding-top: 80px;
+}
+
+@media (max-width:768px)
+{
+    .bothhalves{
+        font-size: 30px;    
+        padding: 0px;
+        display: inline-block;
+        text-align: left;
+        width: 768px;
+    }
+    .bottomtext p{
+        font-size: 20px;
+        padding-left: 20px;
+        border: none;
+    }
+    .lefthalf{
+        padding-bottom: 40px;
+        padding-left: 20px;
+    }
+    .topheader{
+        padding-left: 20px;
+        padding-top: 40px;
+    }
+}
+@media (max-width:768px)
+{
+    .centerpiece{
+        background-image: url(../imgs/bg.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        min-height: 100px;
+        justify-content: center;
+}
+.lefthalf{
+    border: none;
+    font-size: 30px;
+}
+.righthalf{
+    border:none;
+}
+.bottomtext p{
+    font-size: 15px;
+}
+    .bottomtext{
+        font-size: 10px;
+        display: inline-block;
+}
+}
+
+.bottomtext p{
+    text-align: left;
+    padding: 20px;
+    border-top:1px dotted white;
+}
+
+form{
+    font-size: medium;
+    color: rgb(112, 107, 107);
+    padding: 40px 40px 40px 40px;
+    text-align: center;
+}
+
+.block img{
+    height:50px;
+}
+
+.blocks{
+    text-align: center;
+    padding: 100px;
+    margin-left: 8%;
+    margin-right: 8%;
+}
+
+
+.block p{
+    color: rgb(94, 88, 88);
+    padding: 15px;
+}
+
+.block{
+    border: 1px solid lightgrey;
+    box-shadow: 2px lightgray;
+    border-radius: 4px;
+    padding: 20px;
+    margin: 20px;
+}
+
+@media (min-width: 768px) {
+    .blocks {display: flex;
+    }
+}
+
+.block button{
+    background: rgb(59, 56, 56);
+    color: white;
+    width: 100%;
+    text-align: center;
+    padding: 15px;
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.top, .bottom{
+    height: 400px;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.top{
+    text-align: left;
+    background-color: #3a3633;
+    position: relative;
+
+}
+.squares h2{
+    padding: 40px;
+    font-size: 50px;
+    color: white;
+}
+
+.squares p{
+    padding: 10px;
+    font-size: 20px;
+    color: white;
+}
+
+.front p2{
+    color: white;
+    text-size-adjust: 5px;
+}
+
+.front{
+    position: absolute;
+    background-color: #3a3633;
+    border: 8px solid white;
+    width: 200px;
+    text-align: center;
+    padding: 5px 20px;
+    left: 8%;
+    bottom: -8vh;
+}
+
+.bottom{
+    width: 100%;
+    text-align: right;
+    background-color: rgb(56, 156, 250);
+    background: linear-gradient(to right, white, rgb(56, 156, 250));
+}
+
+.front{
+    background-color: #3a3633;
+}
+
+.front, .p2{
+    padding: 20px;
+}
+
+.front h3{
+    font-size: 20px;
+    color: red;
+}
+
+.pics{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+}
+
+.pics img{
+    width: 100%;
+}
+
+@media (min-width: 768px) {
+    .pics img {
+        box-sizing: border-box;
+        width: calc(100% / 3);
+    } }
+
+.block button:hover{
+    border-color: rgb(54, 102, 190);
+}
+
+.mail{
+    padding: 5px;
+}
+
+.box{
+    padding: 5px;
+}
+
+.email{
+
+}
+
+.send{
+    padding: 5px;
+}
+
+.legal-cont{
+    display: flex;
+    border-top:1px solid lightgrey;
+    max-height: 10%;
+    box-sizing: border-box;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.legal{
+    list-style: none;
+    display: flex;
+    padding: 0px 60px;
+    display: inline-block;
+}
+
+.legal-item {
+    padding: 15px;
+}
+.legal-item a{
+    font-size: large;
+    text-decoration: none;
+    color: rgb(112, 107, 107)
+}
